IaC/opensearch/08-deployment-dashboards.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-dashboards
  labels:
    app.kubernetes.io/part-of: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch-dashboards
  template:
    metadata:
      labels:
        app: opensearch-dashboards
        app.kubernetes.io/part-of: database
    spec:
      serviceAccountName: opensearch-sa
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: dashboards
          image: opensearchproject/opensearch-dashboards:2.13.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 5601
          volumeMounts:
            - name: dashboards-config
              mountPath: /usr/share/opensearch-dashboards/config/opensearch_dashboards.yml
              subPath: opensearch_dashboards.yml
              readOnly: true
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          startupProbe:
            tcpSocket:
              port: 5601
            failureThreshold: 20
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 5601
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5601
            initialDelaySeconds: 60
            periodSeconds: 20
      volumes:
        - name: dashboards-config
          configMap:
            name: opensearch-dashboards-config
