IaC/opensearch/06-service-opensearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch
spec:
  type: ClusterIP
  selector:
    app: opensearch
  ports:
    - name: https
      port: 9200
      targetPort: 9200
    - name: transport
      port: 9300
      targetPort: 9300
